--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build --repo https://github.com/dikshant3221/BrahmanSamaj.git",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
