--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bride-groom-form",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/dikshant3221/BrahmanSamaj",
+  "homepage": "https://dikshant3221.github.io/BrahmanSamaj",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
